--- a/Editor/Resources/UI/TabContents/Market/Contents/VRCWMarket.uxml
+++ b/Editor/Resources/UI/TabContents/Market/Contents/VRCWMarket.uxml
@@ -4,8 +4,8 @@
         <ui:TextField picking-mode="Ignore" value="filler text" class="flex-1" />
         <ui:Button text="検索" parse-escape-sequences="true" display-tooltip-when-elided="true" class="px-4" />
         <ui:Button text="更新" parse-escape-sequences="true" display-tooltip-when-elided="true" />
-        <ui:DropdownField index="0" choices="最新順,安い順,高い順" class="w-16" />
-        <ui:Button text="マイリスト" parse-escape-sequences="true" display-tooltip-when-elided="true" class="px-4" />
+        <ui:DropdownField index="0" choices="最新順,安い順,高い順" class="w-32" />
+        <ui:Button name="my_list" text="マイリスト" parse-escape-sequences="true" display-tooltip-when-elided="true" class="px-4" />
     </ui:VisualElement>
-    <ui:ScrollView name="shop_items_container" class="flex-1 " />
+    <ui:ScrollView name="shop_items_container" class="flex-1 p-4" mode="VerticalAndHorizontal" />
 </ui:UXML>
