フォントのパスを修正し、UIフォルダを作成しました

--- a/Editor/Resources/UI/styles.uss
+++ b/Editor/Resources/UI/styles.uss
@@ -1,5 +1,5 @@
 :root {
-    -unity-font-definition: url("/Assets/EAUploader/UI/Noto_Sans_JP.ttf");
+    -unity-font-definition: url("project:///Assets/EAUploader/UI/Noto_Sans_JP.ttf");
 	background-color: white;
 	--primary: rgb(25, 118, 210);
 	--primary-hover: rgb(20, 100, 180);
