--- a/Editor/Resources/UI/styles.uss
+++ b/Editor/Resources/UI/styles.uss
@@ -429,8 +429,9 @@ ProgressBar Label {
 	width: 4px;
 	background-color: var(--default);
 	border-width: 0px;
-	transition-duration: 150ms;
+	transition-duration: 75ms;
 	transition-timing-function: ease-out;
+	transition-property: background-color, width, border-radius;
 }
 
 .unity-base-slider__dragger:hover {
