--- a/Editor/Resources/UI/TabContents/Upload/Contents/UploadForm.uxml
+++ b/Editor/Resources/UI/TabContents/Upload/Contents/UploadForm.uxml
@@ -8,25 +8,26 @@
     noNamespaceSchemaLocation="../../../../../../../UIElementsSchema/UIElements.xsd"
     editor-extension-mode="False">
     <ui:VisualElement class="p-4">
-        <ui:Label class="text-xl font-bold pb-2" name="loginSDKLabel" />
+        <ui:Label text = "Login to VRChat" class="text-xl font-bold pb-2" name="loginSDKLabel" />
         <ui:VisualElement name="login_status" class="pb-2" />
-        <ui:Label class="text-xl font-bold pb-2" name="checkPermissionLabel" />
+        <ui:Label text = "Check you are allowed to upload avatar" class="text-xl font-bold pb-2" name="checkPermissionLabel" />
         <ui:VisualElement name="permission_status" class="pb-2" />
         <ui:VisualElement name="upload_main">
             <ui:VisualElement class="flex-row">
                 <ui:VisualElement class="w-one-half">
-                    <ui:Label class="text-xl font-bold pb-2" name="modelInfoLabel" />
+                    <ui:Label text = "Model Info" class="text-xl font-bold pb-2" name="modelInfoLabel" />
                     <ui:VisualElement value="true" class="pb-2 pr-4" name="avatarInfo">
                         <ui:VisualElement>
+                            <eau:HelpButton msg-id="109" />
                             <eau:TextFieldPro class="pb-2" label="Name" name="content-name" placeholder="Give your avatar a name" required="true" />
-                            <eau:TextFieldPro class="pb-2" label="Description" name="content-description" placeholder="Describe your avatar so it is easier to remember!" required="true" />
+                            <eau:TextFieldPro class="pb-2" label="Description" name="content-description" placeholder="Describe your avatar so it is easier to remember!" required="false" />
                         </ui:VisualElement>
                         <eau:ContentWarningsField label="Content Warnings" name="content-warnings" class="pb-2"/>
                         <ui:DropdownField name="release-status" label="Visibility" index="0" choices="Private,Public" />
                     </ui:VisualElement>
                 </ui:VisualElement>
                 <ui:VisualElement class="w-one-half">
-                    <ui:Label class="text-xl font-bold pb-2" name="addThumbnailLabel" />
+                    <ui:Label text = "Set thumbnail" class="text-xl font-bold pb-2" name="addThumbnailLabel" />
                     <ui:VisualElement name="avatar_thumbnail" class="pb-2">
                         <ui:VisualElement name="thumbnail" class="flex-row h-64">
                             <ui:Image name="thumbnail-image"/>
@@ -34,11 +35,14 @@
                     </ui:VisualElement>
                 </ui:VisualElement>
             </ui:VisualElement>
-            <ui:Label class="text-xl font-bold pb-2" name="buildLabel" />
+            <eau:HelpButton msg-id="110" />
+            <ui:Label text = "Build" class="text-xl font-bold pb-2" name="buildLabel" />
             <eau:ShadowButton text="Build" name="build"/>
-            <ui:Label class="text-xl font-bold pb-2" name="buildandtestLabel" />
+            <eau:HelpButton msg-id="111" />
+            <ui:Label text = "Build as Test" class="text-xl font-bold pb-2" name="buildandtestLabel" />
             <eau:ShadowButton text="Build as Test" name="buildandtest"/>
-            <ui:Label class="text-xl font-bold pb-2" name="uploadLabel" />
+            <eau:HelpButton msg-id="112" />
+            <ui:Label text = "Upload" class="text-xl font-bold pb-2" name="uploadLabel" />
             <eau:ShadowButton text="Upload" name="upload"/>
             <ui:VisualElement name="upload_status" class="pb-2" />
         </ui:VisualElement>
