Fix UI layout and update delete functionality

--- a/Editor/Resources/UI/TabContents/Upload/Contents/UploadForm.uxml
+++ b/Editor/Resources/UI/TabContents/Upload/Contents/UploadForm.uxml
@@ -15,10 +15,12 @@
         <ui:VisualElement name="upload_main">
             <ui:VisualElement class="flex-row">
                 <ui:VisualElement class="w-one-half">
-                    <ui:Label text = "Model Info" class="text-xl font-bold pb-2" name="modelInfoLabel" />
+                    <ui:VisualElement class="flex-row pb-2">
+                        <ui:Label text="Model Info" class="text-xl font-bold" name="modelInfoLabel" />
+                        <eau:HelpButton msg-id="109" class="pl-4 self-center"/>
+                    </ui:VisualElement>
                     <ui:VisualElement value="true" class="pb-2 pr-4" name="avatarInfo">
                         <ui:VisualElement>
-                            <eau:HelpButton msg-id="109" />
                             <eau:TextFieldPro class="pb-2" label="Name" name="content-name" placeholder="Give your avatar a name" required="true" />
                             <eau:TextFieldPro class="pb-2" label="Description" name="content-description" placeholder="Describe your avatar so it is easier to remember!" required="false" />
                         </ui:VisualElement>
@@ -31,18 +33,24 @@
                     <ui:VisualElement name="avatar_thumbnail" class="pb-2">
                         <ui:VisualElement name="thumbnail" class="flex-row h-64">
                             <ui:Image name="thumbnail-image"/>
-                        </ui:VisualElement> 
+                        </ui:VisualElement>
                     </ui:VisualElement>
                 </ui:VisualElement>
             </ui:VisualElement>
-            <eau:HelpButton msg-id="110" />
-            <ui:Label text = "Build" class="text-xl font-bold pb-2" name="buildLabel" />
-            <eau:ShadowButton text="Build" name="build"/>
-            <eau:HelpButton msg-id="111" />
-            <ui:Label text = "Build as Test" class="text-xl font-bold pb-2" name="buildandtestLabel" />
-            <eau:ShadowButton text="Build as Test" name="buildandtest"/>
-            <eau:HelpButton msg-id="112" />
-            <ui:Label text = "Upload" class="text-xl font-bold pb-2" name="uploadLabel" />
+            <ui:VisualElement class="flex-row mb-2">
+                <ui:Label text = "Build" class="text-xl font-bold" name="buildLabel" />
+                <eau:HelpButton msg-id="110" class="ml-4 self-center"/>
+            </ui:VisualElement>
+            <eau:ShadowButton text="Build" name="build" class="mb-2"/>
+            <ui:VisualElement class="flex-row mb-2">
+                <ui:Label text = "Build as Test" class="text-xl font-bold" name="buildandtestLabel" />
+                <eau:HelpButton msg-id="111" class="ml-4 self-center"/>
+            </ui:VisualElement>
+            <eau:ShadowButton text="Build as Test" name="buildandtest" class="mb-2"/>
+            <ui:VisualElement class="flex-row mb-2">
+                <ui:Label text = "Upload" class="text-xl font-bold" name="uploadLabel" />
+                <eau:HelpButton msg-id="112" class="ml-4 self-center"/>
+            </ui:VisualElement>
             <eau:ShadowButton text="Upload" name="upload"/>
         </ui:VisualElement>
     </ui:VisualElement>
