--- a/Editor/Resources/UI/styles.uss
+++ b/Editor/Resources/UI/styles.uss
@@ -456,3 +456,7 @@ ProgressBar Label {
 .unity-base-slider__drag-container {
 	align-items: center;
 }
+
+.active {
+	background-color: var(--primary-selected);
+}
