--- a/Editor/Resources/UI/TabContents/Market/Contents/VRCWMarketItem.uxml
+++ b/Editor/Resources/UI/TabContents/Market/Contents/VRCWMarketItem.uxml
@@ -9,8 +9,12 @@
     editor-extension-mode="False"
 >
     <VisualElement class="product-item flex-row">
-		<VisualElement class="product-item__image">
-            <Image name="Image" />
+        <VisualElement class="product-item__image_container">
+            <eau:Shadow shadow-offset-y="2" shadow-corner-radius="8" shadow-distance="0">
+                <VisualElement class="product-item__image">
+                    <Image name="Image" />
+                </VisualElement>
+            </eau:Shadow>
         </VisualElement>
         <VisualElement class="product-item__info p-4">
             <Label name="Name" class="text-sm font-bold flex-1 overflow-hidden" />
