--- a/Editor/Resources/UI/TabContents/Market/Contents/VRCWMarket.uxml
+++ b/Editor/Resources/UI/TabContents/Market/Contents/VRCWMarket.uxml
@@ -9,7 +9,7 @@
     editor-extension-mode="False"
 >
     <ui:VisualElement class="flex-row">
-        <ui:TextField name="search_input" placeholder="Search" picking-mode="Ignore" class="flex-1" />
+        <eau:TextFieldPro name="search_input" placeholder="Search" picking-mode="Ignore" class="flex-1" />
         <ui:Button name="search_button" text="検索" parse-escape-sequences="true" display-tooltip-when-elided="true" class="px-4" />
         <ui:Button name="refresh_button" text="更新" parse-escape-sequences="true" display-tooltip-when-elided="true" />
         <ui:Button name="my_list" text="マイリスト" parse-escape-sequences="true" display-tooltip-when-elided="true" class="px-4" />
