Refactor UI layout and styling

--- a/Editor/Resources/UI/MainWindow.uxml
+++ b/Editor/Resources/UI/MainWindow.uxml
@@ -7,19 +7,20 @@
     editor="UnityEditor.UIElements"
     noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd"
     editor-extension-mode="False">
-    <eau:Shadow>
-        <ui:VisualElement name="tabs" class="tabs flex-row h-8">       
+    <ui:VisualElement name="contentRoot" class="contentRoot flex-1" style="background-color: rgba(0, 0, 0, 0); background-image: none;" />
+    <eau:Shadow name="tabs_shadow">
+        <ui:VisualElement name="tabs" class="tabs flex-row h-8">
             <ui:Button parse-escape-sequences="true" display-tooltip-when-elided="true" name="settings" class="tab-button">
                 <eau:MaterialIcon icon="settings" />
                 <ui:Label text="Import/Settings" />
             </ui:Button>
             <ui:Button parse-escape-sequences="true" display-tooltip-when-elided="true" name="setup" class="tab-button">
                 <eau:MaterialIcon icon="edit" />
-			    <ui:Label text="Setup"  />
+                <ui:Label text="Setup"  />
             </ui:Button>
             <ui:Button parse-escape-sequences="true" display-tooltip-when-elided="true" name="upload" class="tab-button">
                 <eau:MaterialIcon icon="upload" />
-			    <ui:Label text="Upload" />
+                <ui:Label text="Upload" />
             </ui:Button>
             <ui:Button parse-escape-sequences="true" display-tooltip-when-elided="true" name="market" class="tab-button">
                 <eau:MaterialIcon icon="travel_explore" />
@@ -27,5 +28,4 @@
             </ui:Button>
         </ui:VisualElement>
     </eau:Shadow>
-    <ui:VisualElement name="contentRoot" class="contentRoot flex-1" style="background-color: rgba(0, 0, 0, 0); background-image: none;" />
 </ui:UXML>
